<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ControlVaccinesActivity"
    tools:showIn="@layout/activity_controlvaccines">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout10"
        android:baselineAligned="false"
        android:background="@drawable/border"
        android:padding="10dip" >


        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/iconbebe" />

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_child_information_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Luis"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/age_child_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 meses"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout10"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout56">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_vaccine" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout56"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout57">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha de aplicación"
            android:id="@+id/textView40"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout57"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout58">

        <EditText
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#d4d4d4"
            android:hint="Seleccione la fecha..."
            android:padding="15dp"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout58"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout59">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lote de vacuna"
            android:id="@+id/textView41"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout59"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout60">

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seleccionar Foto" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout60"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="125dp"
            android:id="@+id/imageView3"
            android:src="@mipmap/ic_launcher"
            android:elevation="1dp" />
    </LinearLayout>

</RelativeLayout>
