<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MedicalevidenceActivity"
    tools:showIn="@layout/activity_medicalevidence">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout10"
        android:baselineAligned="false"
        android:background="@drawable/border"
        android:padding="10dip" >


        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/iconbebe" />

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_child_information_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Luis"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/age_child_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 meses"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout10"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout63">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:id="@+id/textView51"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout63"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout64">


        <EditText
            android:id="@+id/date_evidence"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#d4d4d4"
            android:hint="Seleccione la fecha..."
            android:padding="15dp"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout64"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout65">

        <Button
            android:id="@+id/btnSelectPhoto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seleccionar Foto" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout65"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout66">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="121dp"
            android:id="@+id/incidenciaImageview"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout66"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout67">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sintomatologia"
            android:id="@+id/textView52"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout67"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtSintomatologia" />
    </LinearLayout>


</RelativeLayout>
